--- a/ansible/mongo.yml
+++ b/ansible/mongo.yml
@@ -1,25 +1,28 @@
 - name: Install Mongo
-- hosts: self
-- tasks:
+  hosts: self
+  connection: local
+  tasks:
   - name: Add MongoDB public key
-    sudo: yes
-    apt_key: >
-      keyserver=hkp://keyserver.ubuntu.com:80
-      id=7F0CEB10
-      state=present
+    become: yes
+    apt_key: 
+      url: https://www.mongodb.org/static/pgp/server-4.2.asc
+      state: present
   - name: Create list file for MongoDB
     become: yes
-    lineinfile: >
-      line="deb https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.2 multiverse"
-      dest=/etc/apt/sources.list.d/mongodb.list
-      state=present
-      create=yes
+    lineinfile: 
+      line: "deb https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.2 multiverse"
+      dest: "/etc/apt/sources.list.d/mongodb.list"
+      state: present
+      create: yes
   - name: Actually install MongoDB
     become: yes
-    apt: name=mongodb-org state=latest update_cache=yes
-    notify:
-      - update apt
+    apt: 
+      name: mongodb-org
+      state: latest
+      force_apt_get: yes
+      update_cache: yes
   - name: Start MongoDB
+    become: yes
     service:
-        name: mongodb
+        name: mongod
         state: started
