--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,2 +1,6 @@
 [defaults]
+transport=ssh
 private_key_file=key.pem
+
+[ssh-connection]
+ssh-args=-o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s
