--- a/ansible/webserver.yml
+++ b/ansible/webserver.yml
@@ -5,7 +5,13 @@
     - name: Install Node.js
       become: yes
       apt:
-        ame: nodejs
+        name: nodejs
         force_apt_get: yes
         update_cache: yes
+    - name: git clone repo
+      git:
+        repo: 'git@github.com:TaskSquirrel/chirp.git'
+        dest: ~/chirp
+        accept_hostkey: yes
+        update: yes
 
