--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 transport=ssh
 private_key_file=key.pem
+host_key_checking=False
 
 [ssh-connection]
 ssh-args=-o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s
