--- a/packages/chirp-api/package.json
+++ b/packages/chirp-api/package.json
@@ -2,9 +2,20 @@
   "name": "chirp-api",
   "version": "0.0.1",
   "scripts": {
-    "start": "node src/app.js"
+    "clean": "rm -rf build/",
+    "build": "tsc",
+    "prestart": "npm run clean && npm run build",
+    "start": "node ./build/app.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.5",
+    "typescript": "^3.6.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.1",
+    "@types/mongoose": "^5.5.21",
+    "@types/node": "^12.11.1"
   }
 }
