--- a/packages/chirp-api/package.json
+++ b/packages/chirp-api/package.json
@@ -8,13 +8,16 @@
     "start": "node ./build/app.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.3.3",
     "mongoose": "^5.7.5",
     "typescript": "^3.6.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
+    "@types/mongodb": "^3.3.6",
     "@types/mongoose": "^5.5.21",
     "@types/node": "^12.11.1"
   }
