--- a/packages/chirp-api/package.json
+++ b/packages/chirp-api/package.json
@@ -8,15 +8,20 @@
     "start": "node ./build/app.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.3",
-    "mongoose": "^5.7.5",
     "typescript": "^3.6.4"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.1",
+    "@types/express-session": "^1.15.15",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/mongodb": "^3.3.6",
     "@types/mongoose": "^5.5.21",
     "@types/node": "^12.11.1"
