--- a/packages/chirp-api/tsconfig.json
+++ b/packages/chirp-api/tsconfig.json
@@ -14,5 +14,6 @@
         "resolveJsonModule": true,
         "isolatedModules": true
     },
-    "include": ["src"]
+    "include": ["src"],
+    "files": ["chirp.d.ts"]
 }
