--- a/packages/chirp-api/package.json
+++ b/packages/chirp-api/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.3",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
