--- a/packages/chirp-api/package.json
+++ b/packages/chirp-api/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.3",
+    "morgan": "^1.9.1",
+    "shortid": "^2.2.15",
     "typescript": "^3.6.4",
     "uuid": "^3.3.3"
   },
@@ -25,6 +27,9 @@
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mongodb": "^3.3.6",
     "@types/mongoose": "^5.5.21",
-    "@types/node": "^12.11.1"
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^12.11.1",
+    "@types/shortid": "0.0.29",
+    "@types/uuid": "^3.4.5"
   }
 }
