--- a/packages/chirp-api/package.json
+++ b/packages/chirp-api/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.3",
+    "nodemailer": "^6.3.1",
     "typescript": "^3.6.4",
     "uuid": "^3.3.3"
   },
@@ -25,6 +26,7 @@
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mongodb": "^3.3.6",
     "@types/mongoose": "^5.5.21",
-    "@types/node": "^12.11.1"
+    "@types/node": "^12.11.1",
+    "@types/nodemailer": "^6.2.1"
   }
 }
