--- a/packages/chirp-ui/package.json
+++ b/packages/chirp-ui/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.19",
-    "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
@@ -38,6 +38,8 @@
   "devDependencies": {
     "@types/classnames": "^2.2.9",
     "@types/node": "^12.11.2",
-    "@types/react-router-dom": "^5.1.0"
+    "@types/react": "^16.9.9",
+    "@types/react-router-dom": "^5.1.0",
+    "tslint-react": "^4.1.0"
   }
 }
