--- a/packages/chirp-api/package.json
+++ b/packages/chirp-api/package.json
@@ -8,6 +8,7 @@
     "start": "node ./build/app.js"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.4.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
