--- a/packages/chirp-api/package.json
+++ b/packages/chirp-api/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.3",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.3.1",
     "shortid": "^2.2.15",
     "typescript": "^3.6.4",
@@ -32,6 +33,7 @@
     "@types/mongodb": "^3.3.6",
     "@types/mongoose": "^5.5.23",
     "@types/morgan": "^1.7.37",
+    "@types/multer": "^1.3.10",
     "@types/node": "^12.11.7",
     "@types/nodemailer": "^6.2.2",
     "@types/shortid": "0.0.29",
