--- a/packages/chirp-mongodb/query/mongos.conf
+++ b/packages/chirp-mongodb/query/mongos.conf
@@ -35,7 +35,7 @@ processManagement:
 #replication:
 
 sharding:
-  configDB: configReplSet/config1:27019,config2:27019
+  configDB: configReplSet/config1:27019,config2:27019,config3:27019
 
 ## Enterprise-Only Options:
 
