--- a/packages/chirp-api-nginx/config
+++ b/packages/chirp-api-nginx/config
@@ -1,11 +1,11 @@
 upstream api {
-    server 192.168.122.10:6969 max_fails=3 fail_timeout=30s;
-    server 192.168.122.14:6969 max_fails=3 fail_timeout=30s;
-    server 192.168.122.26:6969 max_fails=3 fail_timeout=30s;
-    server 192.168.122.31:6969 max_fails=3 fail_timeout=30s;
-    server 192.168.122.32:6969 max_fails=3 fail_timeout=30s;
-    server 192.168.122.33:6969 max_fails=3 fail_timeout=30s;
-    server 192.168.122.34:6969 max_fails=3 fail_timeout=30s;
+    server 192.168.122.10:6969;
+    server 192.168.122.14:6969;
+    server 192.168.122.26:6969;
+    server 192.168.122.31:6969;
+    server 192.168.122.32:6969;
+    server 192.168.122.33:6969;
+    server 192.168.122.34:6969;
 }
 
 server {
