--- a/packages/chirp-api-nginx/config
+++ b/packages/chirp-api-nginx/config
@@ -3,9 +3,9 @@ upstream api {
     server 192.168.122.14:6969;
     server 192.168.122.26:6969;
     server 192.168.122.31:6969;
-    server 192.168.122.32:6969;
-    server 192.168.122.33:6969;
-    server 192.168.122.34:6969;
+    # server 192.168.122.32:6969;
+    # server 192.168.122.33:6969;
+    # server 192.168.122.34:6969;
 }
 
 server {
